--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     </div>
    </section>
 
-
+<!-- NOTICE -->
 <section class="notice">
 
   <div class="notice-line">
@@ -439,10 +439,15 @@
             <div class="material-icons">upload</div>
           </div>
         </div>
-
       </div>
   </div>
   
+  <div class="promotion">
+    <div class="swiper-container">
+      TEST!
+    </div>    
+  </div>
+
 </section>
    
 
