--- a/index.html
+++ b/index.html
@@ -493,6 +493,15 @@
 
   </div>
 </sectoin>
+
+
+<!-- YOUTUBE VIDEO -->
+<section class="youtube">
+    <div class="youtube__area">
+      <div id="player"></div>
+    </div>
+    <div class="youtube__cover"></div>
+</section>
    
 
 </body>
