--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link
     <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
-
+    <script defer src="./js/youtube.js"></script>
     <script defer src="./js/main.js"></script>
 </head>
 <body>
