--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link
     <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
-    <script defer src="./js/youtube.js"></script>
+    <!-- <script defer src="./js/youtube.js"></script> -->
     <script defer src="./js/main.js"></script>
 </head>
 <body>
@@ -501,6 +501,13 @@
       <div id="player"></div>
     </div>
     <div class="youtube__cover"></div>
+    <div class="inner">
+
+      <img src="./images/floating1.png" alt="Icon" class="floating floating1" />
+      <img src="./images/floating2.png" alt="Icon" class="floating floating2" />
+      <img src="./images/floating3.png" alt="Icon" class="floating floating3" />
+
+    </div>
 </section>
    
 
